--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -6,13 +6,11 @@
 
         <!-- 可选的 Bootstrap 主题文件（一般不用引入） -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="/css/me.css">
         <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-        <link rel="stylesheet" href="/css/me.css">
         <meta charset="UTF-8">
-        <title>小小社区</title>
+        <title>小小社区-提问</title>
     </head>
     <body>
         <nav class="navbar navbar-default" >
@@ -21,7 +19,7 @@
                 <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                        <span class="sr-only">小小社区</span>
+                        <span class="sr-only">小小社区-提问</span>
                     </button>
                     <a class="navbar-brand" href="/">小小社区</a>
                 </div>
@@ -36,7 +34,7 @@
                     </form>
                     <ul class="nav navbar-nav navbar-right">
                         <li th:if="${session.user!=null}">
-                            <a href="/publish">提问</a>
+                            <a href="/publish">提问中心</a>
                         </li>
                         <li class="dropdown" th:if="${session.user!=null}">
                             <a href="#"
@@ -59,37 +57,47 @@
                 <div class="row">
                     <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12" >
                         <h2>
-                             <div class="glyphicon glyphicon-list" aria-hidden="true">
-                                 <span>发现</span>
-                             </div>
+                            <span class="glyphicon glyphicon-pencil" aria-hidden="true">提问</span>
                         </h2>
                         <hr/>
-                        <div class="media" th:each="question:${questionDTOList}">
-                            <div class="media-left">
-                                <a href="#">
-                                    <img class="media-object img-circle" th:src="${question.user.avatarUrl}"  >
-                                </a>
+                        <form action="/publish" method="post">
+                            <div class="form-group">
+                                <label for="title">标题</label>
+                                <input type="text" class="form-control" id="title" name="title" placeholder="请输入问题的标题.." th:value="${title}">
                             </div>
-                            <div class="media-body">
-                                <h4 class="media-heading" th:text="${question.title}"></h4>
-                                <span th:text="${question.description}"></span><br>
-                                <span class="text-desc">
-                                    <span th:text=" ${question.commentCnt}+个回复 "></span>
-                                    <span th:text=" ${question.viewCnt}+次浏览 "></span>
-                                    <span th:text=" 发布时间：+${#dates.format(question.getGmtCreate(),'yyyy-MM-dd HH:mm')}"></span>
-                                </span>
+                            <div class="form-group">
+                                <label for="description">详细描述</label>
+                                <textarea name="description"th:text="${description}" id="description"  class="form-control"  cols="30" rows="10"></textarea>
                             </div>
-                        </div>
-                    </div>
-                        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-                            <h2>热门话题</h2>
-                        </div>
-                    </div>
+                            <div class="form-group">
+                                <label for="tag">标签</label>
+                                <input type="text" name="tag" id="tag" class="form-control" placeholder="请输入标签.." th:value="${tag}">
+                            </div>
+                            <div class="container-fluid main">
+                                <div class="row">
+                                    <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+                                        <div class="alert alert-danger col-lg-9 col-md-12 col-sm-12 col-xs-12"
+                                             th:text="${error}" th:if="${error!=null}">
+                                        </div>
+                                    </div>
+                                    <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+                                        <button type="submit" class="btn btn-success btn-publish">发布</button>
+                                    </div>
+                                </div>
 
+                            </div>
+
+                                </form>
+                    </div>
+                    <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
+                        <h3>提问指南</h3>
+                        *请尽量用精简语言*<br>
+                        *请选择问题对应标签*<br>
+                        *请补充问题充分的描述*<br>
+                    </div>
                 </div>
 
             </div>
-
 
 
 
