--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -27,6 +27,7 @@
                         </h2>
                         <hr/>
                         <form action="/publish" method="post">
+                            <input type="hidden" name="id" th:value="${id}">
                             <div class="form-group">
                                 <label for="title">标题</label>
                                 <input type="text" class="form-control" id="title" name="title" placeholder="请输入问题的标题.." th:value="${title}">
