--- a/src/main/resources/static/css/me.css
+++ b/src/main/resources/static/css/me.css
@@ -6,7 +6,7 @@ body {
     margin: 30px;
 }
 
-.btn-publish{
+.btn-submit{
     float: right;
     margin-bottom: 15px;
 }
@@ -23,6 +23,7 @@ body {
 }
 
 .share{
+    float: right;
     color: #999;
     font-size: 13px;
 }
