--- a/src/main/resources/templates/questionPage.html
+++ b/src/main/resources/templates/questionPage.html
@@ -14,6 +14,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
         <link rel="stylesheet" href="/css/me.css">
+
+        <script   src="/js/me.js" type="application/javascript"></script>
+
         <meta charset="UTF-8">
         <title th:text="${questionUser.getTitle()}"></title>
     </head>
@@ -25,23 +28,49 @@
             <!--中间内容-->
             <div class="container-fluid main">
                 <div class="row">
+
                     <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12" >
+
                         <h4>
-                             <span  th:text="${questionUser.getTitle()}"><span/>
+                             <span  th:text="${questionUser.getTitle()}"  ><span/>
                         </h4>
                         <span class="text-desc">
                                     <span th:text="'作者:'+${questionUser.getUser().getName()} "></span>
                                     <span th:text=" '发布时间:'+${#dates.format(questionUser.getGmtCreate(),'yyyy-MM-dd HH:mm')}"></span>
                                     <span th:text=" '阅读量:'+${questionUser.getViewCnt()} "></span>
                         </span>
-                        <hr/>
+                         <hr/>
+
                         <div th:text="${questionUser.getDescription()}"></div>
                         <hr/>
-                        <a th:href="@{'/publish/'+${questionUser.getId()}}" class="share" th:if="${session.user !=null && session.user.getAccountId()==questionUser.getCreator()}">
+
+                        <a th:href="@{'/publish/'+${questionUser.getId()}}" class="share" th:if="${session.user !=null && session.user.getId()==questionUser.getCreator()}">
                             <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                             编辑
-                        </a>
+                        </a><br>
+
+                        <hr/>
+                        <div id="comment_section">
+                            <div class="media">
+                                <div class="media-left  media-middle">
+                                    <a href="#">
+                                        <img class="media-object img-circle" th:src="${user.getAvatarUrl()}">
+                                    </a>
+                                </div>
+                                <div class="media-body">
+                                    <h5>
+                                        <span th:text="${user.getName()}"></span>
+                                    </h5>
+                                </div>
+                            </div>
+
+                            <input type="hidden" id="question_id" th:value="${questionUser.getId()}">
+                            <textarea class="form-control comment" id="comment_content" rows="7" placeholder="请输入评论..."></textarea>
+                            <button type="button" class="btn btn-success btn-submit" onclick="post()">回复</button>
+                        </div>
+
                     </div>
+
                     <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                            <h4>发起人</h4>
@@ -62,12 +91,8 @@
                             <h4>相关问题</h4>
                         </div>
                     </div>
-                </div>
 
             </div>
-
-            </div>
-
         </nav>
     </body>
 </html>
