--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -50,12 +50,9 @@
                                         width  : "100%",
                                         height : 400,
                                         path   : "/lib/editormd/lib/",
-                                        saveHTMLToTextarea : true,
-                                        imageUpload       : true,
-                                        imageFormats      : ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
-                                        // imageUploadURL    : "http://www.aaa.com/upload?name=aa",//上传请求的地址
-                                        // crossDomainUpload : true,
-                                        uploadCallbackURL : "/file/upload"//上传成功后跳转的地址
+                                        imageUpload: true,
+                                        imageFormats: ["jpg", "jpeg", "gif", "png", "bmp", "webp"],
+                                        imageUploadURL: "/file/upload",
                                     });
                                 });
                             </script>
