--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
         <title>小小社区</title>
     </head>
     <body>
-        <nav class="navbar navbar-default" >
+        <nav class="navbar navbar-default" style="padding: 0px;margin: 0px">
             <!--导航头-->
             <div th:insert="~{head :: nav}"></div>
 
@@ -89,12 +89,8 @@
 
                 </div>
 
-            </div>
-
-
-
-
-
         </nav>
+
     </body>
+    <div th:insert="~{foot :: footer}"></div>
 </html>
