--- a/src/main/resources/templates/questionPage.html
+++ b/src/main/resources/templates/questionPage.html
@@ -36,7 +36,7 @@
             <!--导航头-->
             <div th:insert="~{head :: nav}"></div>
 
-            <!--中间内容-->
+            <!--主体-->
             <div class="container-fluid main">
                 <div class="row">
 
@@ -48,8 +48,8 @@
                             </h2>
                             <span class="text-desc">m
                                         <span th:text="'作者:'+${questionUser.getUser().getName()} "></span>
-                                        <span style="float: right" th:text=" ' | 发布时间:'+${#dates.format(questionUser.getGmtCreate(),'yyyy-MM-dd HH:mm')} "></span>
-                                        <span style="float: right" th:text=" ' |  阅读量:'+${questionUser.getViewCnt()} "></span>
+                                        <span style="float: right" th:text=" '发布时间:'+${#dates.format(questionUser.getGmtCreate(),'yyyy-MM-dd HH:mm')}" class="glyphicon glyphicon-time marginandpadding"></span>
+                                        <span style="float: right" th:text=" '阅读量:'+${questionUser.getViewCnt()}" class="glyphicon glyphicon-eye-open marginandpadding"></span>
                             </span>
                              <hr/>
 
@@ -62,17 +62,17 @@
                                     editormd.markdownToHTML("question-view", {});
                                 });
                             </script>
-                            <hr/>
                         </div>
                         <!--标签-->
-                        <hr>
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" >
+                            <span th:text="  标签："></span>
                         <span class="label label-info question-tag" th:each="tag : ${questionUser.getTag().split(',')}">
                             <span class="glyphicon glyphicon-tags"></span>
                             <span class="label label-info" th:text="${tag}"></span>
                         </span>
                         </div>
-                        <a th:href="@{'/publish/'+${questionUser.getId()}}" class="edit" th:if="${session.user !=null && session.user.getId()==questionUser.getCreator()}">
+                        <a th:href="@{'/publish/'+${questionUser.getId()}}" class="edit marginandpadding" th:if="${session.user !=null && session.user.getId()==questionUser.getCreator()}">
                             <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
                             编辑
                         </a><br>
@@ -80,7 +80,7 @@
 
                         <!--回复-->
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                            <h4><span th:text="${questionUser.getCommentCnt()}"></span>条评论</h4>
+                            <h4 th:align="center"><span th:text="${questionUser.getCommentCnt()}"></span>条评论</h4>
                             <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-hr">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments" th:each="comment : ${comments}">
                                 <div class="media">
@@ -127,7 +127,7 @@
                         <!--回复框-->
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <div id="comment_section">
-                                <div class="media">
+                                <div class="media marginandpadding">
                                     <div class="media-left  media-middle">
                                         <a href="#">
                                             <img class="media-object img-circle"   th:src="${user != null ? user.getAvatarUrl() : '/img/anonymous.png'}">
